styles.css
* {
  margin: 0;
  box-sizing: border-box;
  font-family: monospace;
}

#container {
  min-height: 100dvh;
  max-width: 100dvw;
  display: flex;
  align-items: center;
  justify-content: center;
}

#calculator {
  max-width: 100%;
  background-color: ghostwhite;
  padding: 1rem;
  border: 1px solid gray;
}

h1 {
  text-align: center;
  margin-bottom: 1rem;
}

#display {
  border: 1px solid gray;
  text-align: right;
  font-size: 48px;
  min-height: 58px;
  max-width: 100%;
  overflow-x: scroll;
}

#rows {
  padding-top: 1rem;
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
}

button {
  padding: 1rem 1.75rem;
  font-size: 32px;
  border: 1px solid gray;
  margin: 1px;
}

button:hover {
  filter: brightness(0.9);
}

#clear {
  background-color: crimson;
  color: whitesmoke;
}

.opButton {
  background-color: coral;
}

button:active {
  filter: brightness(0.8);
}

